--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
   </script>
   
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       overflow-x: hidden;
       width: 100%;
       max-width: 100vw;
+      margin: 0;
+      padding: 0;
     }
 
     header {
-      margin-top: 0;
-      padding-top: 0;
       width: 100%;
+      text-align: center;
     }
 
     header h1 {
@@ -53,10 +58,14 @@
       transform: scale(1.15);
     }
 
+    /* ==============================
+       DESKTOP LAYOUT
+    ============================== */
     .globe-nav-container {
       position: relative;
-      max-width: 1200px;
-      height: 450px;
+      width: 100%;
+      max-width: 1400px;
+      height: 460px;
       margin: 0 auto 3rem;
       display: flex;
       align-items: center;
@@ -90,28 +99,29 @@
       z-index: 50;
     }
 
+    /* Inside edge at 280px from center, buttons grow outward */
     .nav-buttons-left {
-      right: calc(50% + 260px);
+      right: calc(50% + 280px);
     }
 
     .nav-buttons-right {
-      left: calc(50% + 260px);
+      left: calc(50% + 280px);
     }
 
     .nav-btn {
-      padding: 0.7rem 1.4rem;
+      padding: 0.75rem 1.5rem;
       background: #fff;
       border: 2px solid #000;
       color: #000;
       text-decoration: none;
-      font-size: 0.85rem;
+      font-size: 0.82rem;
       text-transform: uppercase;
       letter-spacing: 1px;
       transition: all 0.3s ease;
       display: block;
       text-align: center;
       white-space: nowrap;
-      width: 200px;
+      width: 220px;
     }
 
     .nav-btn:hover {
@@ -120,77 +130,87 @@
       transform: scale(1.05);
     }
 
-    .nav-buttons-left .nav-btn:nth-child(1) {
-      transform: translateY(-70px);
-    }
-    .nav-buttons-left .nav-btn:nth-child(1):hover {
-      transform: translateY(-70px) scale(1.05);
-    }
-    .nav-buttons-left .nav-btn:nth-child(2) {
-      transform: translateY(-25px);
-    }
-    .nav-buttons-left .nav-btn:nth-child(2):hover {
-      transform: translateY(-25px) scale(1.05);
-    }
-    .nav-buttons-left .nav-btn:nth-child(3) {
-      transform: translateY(25px);
-    }
-    .nav-buttons-left .nav-btn:nth-child(3):hover {
-      transform: translateY(25px) scale(1.05);
-    }
-    .nav-buttons-left .nav-btn:nth-child(4) {
-      transform: translateY(70px);
-    }
-    .nav-buttons-left .nav-btn:nth-child(4):hover {
-      transform: translateY(70px) scale(1.05);
-    }
+    .nav-buttons-left .nav-btn:nth-child(1) { transform: translateY(-70px); }
+    .nav-buttons-left .nav-btn:nth-child(1):hover { transform: translateY(-70px) scale(1.05); }
+    .nav-buttons-left .nav-btn:nth-child(2) { transform: translateY(-25px); }
+    .nav-buttons-left .nav-btn:nth-child(2):hover { transform: translateY(-25px) scale(1.05); }
+    .nav-buttons-left .nav-btn:nth-child(3) { transform: translateY(25px); }
+    .nav-buttons-left .nav-btn:nth-child(3):hover { transform: translateY(25px) scale(1.05); }
+    .nav-buttons-left .nav-btn:nth-child(4) { transform: translateY(70px); }
+    .nav-buttons-left .nav-btn:nth-child(4):hover { transform: translateY(70px) scale(1.05); }
 
-    .nav-buttons-right .nav-btn:nth-child(1) {
-      transform: translateY(-70px);
-    }
-    .nav-buttons-right .nav-btn:nth-child(1):hover {
-      transform: translateY(-70px) scale(1.05);
-    }
-    .nav-buttons-right .nav-btn:nth-child(2) {
-      transform: translateY(-25px);
-    }
-    .nav-buttons-right .nav-btn:nth-child(2):hover {
-      transform: translateY(-25px) scale(1.05);
-    }
-    .nav-buttons-right .nav-btn:nth-child(3) {
-      transform: translateY(25px);
-    }
-    .nav-buttons-right .nav-btn:nth-child(3):hover {
-      transform: translateY(25px) scale(1.05);
-    }
-    .nav-buttons-right .nav-btn:nth-child(4) {
-      transform: translateY(70px);
-    }
-    .nav-buttons-right .nav-btn:nth-child(4):hover {
-      transform: translateY(70px) scale(1.05);
-    }
+    .nav-buttons-right .nav-btn:nth-child(1) { transform: translateY(-70px); }
+    .nav-buttons-right .nav-btn:nth-child(1):hover { transform: translateY(-70px) scale(1.05); }
+    .nav-buttons-right .nav-btn:nth-child(2) { transform: translateY(-25px); }
+    .nav-buttons-right .nav-btn:nth-child(2):hover { transform: translateY(-25px) scale(1.05); }
+    .nav-buttons-right .nav-btn:nth-child(3) { transform: translateY(25px); }
+    .nav-buttons-right .nav-btn:nth-child(3):hover { transform: translateY(25px) scale(1.05); }
+    .nav-buttons-right .nav-btn:nth-child(4) { transform: translateY(70px); }
+    .nav-buttons-right .nav-btn:nth-child(4):hover { transform: translateY(70px) scale(1.05); }
 
+    /* Social buttons */
     .homepage-social {
       margin-top: 2rem;
       margin-bottom: 2rem;
     }
 
+    .social-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.5rem 1.2rem;
+      border: 1px solid #000;
+      text-decoration: none;
+      color: #000;
+      font-size: 0.9rem;
+      transition: all 0.3s;
+      background: #fff;
+    }
+
+    .social-btn:hover {
+      background: #000;
+      color: #fff;
+    }
+
+    .social-btn:hover .social-icon {
+      filter: invert(1);
+    }
+
+    .social-icon {
+      width: 18px;
+      height: 18px;
+      object-fit: contain;
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    /* Footer */
     footer {
       margin-top: 0;
-      padding-bottom: 2rem;
+      padding: 1rem;
       width: 100%;
     }
 
     .visitor-counter {
-      font-size: 0.8rem;
+      font-size: 0.75rem;
       color: #999;
-      margin-top: 0.5rem;
+      margin-top: 0.25rem;
+      line-height: 1;
     }
 
+    .visitor-counter img {
+      height: 16px;
+      width: auto;
+    }
+
+    /* Hide mobile grid on desktop */
     .mobile-nav-grid {
       display: none;
     }
 
+    /* ==============================
+       TABLET / MEDIUM SCREENS
+    ============================== */
     @media (max-width: 1100px) {
       .nav-buttons-left,
       .nav-buttons-right {
@@ -211,75 +231,160 @@
         padding: 0.6rem 0.8rem;
         font-size: 0.85rem;
         width: auto;
+        white-space: normal;
+        text-align: center;
       }
 
       .mobile-nav-grid .nav-btn:hover {
-        transform: scale(1);
+        transform: none;
       }
     }
 
-    @media (max-width: 768px) {
+    /* ==============================
+       MOBILE VERTICAL
+    ============================== */
+    @media (max-width: 768px) and (orientation: portrait) {
       header h1 {
         font-size: 1.8rem;
         margin-top: 3.5rem;
-        margin-bottom: 1rem;
-        word-spacing: 100vw;
-        line-height: 1.2;
+        margin-bottom: 0.5rem;
+        display: block;
+        text-align: center;
+        width: 100%;
+        word-break: break-word;
+        white-space: normal;
+        /* Force two lines */
+        max-width: 8ch;
+        margin-left: auto;
+        margin-right: auto;
+        line-height: 1.3;
       }
 
       .globe-nav-container {
-        flex-direction: column;
         height: auto;
-        margin: 0 auto;
-        position: relative;
+        margin: 0;
+        display: block;
+        width: 100%;
       }
 
       .globe-wrapper {
         position: relative;
-        width: 180px;
-        height: 180px;
+        width: 160px;
+        height: 160px;
         top: auto;
         left: auto;
-        transform: none;
-        margin: 0 auto 25rem;
+        transform: none !important;
+        display: block;
+        margin: 0.5rem auto 0;
       }
 
       .globe-wrapper:hover {
-        transform: scale(1.05);
+        transform: scale(1.05) !important;
       }
 
-      .rotating-text {
-        transform: scale(0.9);
-        transform-origin: center;
+      .globe-wrapper .globe-container {
+        width: 160px;
+        height: 160px;
+      }
+
+      .globe-wrapper img.globe {
+        width: 100%;
+        height: 100%;
+      }
+
+      /* Scale rotating text to match globe */
+      .globe-wrapper .rotating-text {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      /* Big empty space for animation landing zone */
+      .animation-space {
+        display: block;
+        height: 35vh;
+        width: 100%;
       }
 
       .mobile-nav-grid {
-        margin-bottom: 2rem;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 0.8rem;
+        width: 100%;
+        max-width: 360px;
+        margin: 0 auto 2rem;
+        padding: 0 1rem;
       }
 
-      .homepage-social {
-        margin-top: 2rem;
-        margin-bottom: 2rem;
+      .mobile-nav-grid .nav-btn {
+        padding: 0.6rem 0.5rem;
+        font-size: 0.8rem;
+        width: auto;
+        white-space: normal;
+        text-align: center;
       }
     }
 
-    @media (max-width: 768px) and (orientation: landscape) {
+    /* ==============================
+       MOBILE LANDSCAPE
+    ============================== */
+    @media (max-width: 900px) and (orientation: landscape) {
       header h1 {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         margin-top: 3.5rem;
-        word-spacing: normal;
-        line-height: 1;
+        margin-bottom: 0.5rem;
+        /* Two lines in landscape too */
+        display: block;
+        max-width: 8ch;
+        margin-left: auto;
+        margin-right: auto;
+        line-height: 1.3;
+        text-align: center;
+      }
+
+      .globe-nav-container {
+        height: auto;
+        margin: 0;
+        display: block;
+        width: 100%;
       }
 
       .globe-wrapper {
-        width: 160px;
-        height: 160px;
-        margin-bottom: 15rem;
+        position: relative;
+        width: 120px;
+        height: 120px;
+        top: auto;
+        left: auto;
+        transform: none !important;
+        display: block;
+        margin: 0.5rem auto 0;
+      }
+
+      .globe-wrapper:hover {
+        transform: scale(1.05) !important;
+      }
+
+      .globe-wrapper .globe-container {
+        width: 120px;
+        height: 120px;
+      }
+
+      /* NO animation space in landscape */
+      .animation-space {
+        display: none;
       }
 
       .mobile-nav-grid {
-        max-width: 600px;
-        gap: 0.6rem;
+        max-width: 500px;
+        gap: 0.5rem;
+        margin: 1rem auto;
+      }
+
+      .mobile-nav-grid .nav-btn {
+        font-size: 0.8rem;
+        padding: 0.5rem;
       }
     }
   </style>
@@ -306,10 +411,9 @@
     <h1 id="main-title">WALTHER WORLDWIDE</h1>
   </header>
 
-  <!-- Main Globe Section with Navigation -->
   <main>
     <div class="globe-nav-container">
-      <!-- Left Navigation Buttons (Desktop only) -->
+      <!-- Left Buttons - Desktop only -->
       <div class="nav-buttons-left">
         <a href="paintings.html" class="nav-btn">Paintings</a>
         <a href="drawings.html" class="nav-btn">Drawings</a>
@@ -317,11 +421,10 @@
         <a href="video.html" class="nav-btn">Video</a>
       </div>
 
-      <!-- Globe (clickable to links page) -->
+      <!-- Globe -->
       <a href="links.html" class="globe-wrapper">
         <div class="globe-container">
           <img src="images/world-icon-hand-drawn-illustration-editable-line-stroke-vector.png" alt="Globe" class="globe" />
-
           <svg class="rotating-text" viewBox="0 0 500 500">
             <defs>
               <path id="circlePath"
@@ -339,7 +442,7 @@
         </div>
       </a>
 
-      <!-- Right Navigation Buttons (Desktop only) -->
+      <!-- Right Buttons - Desktop only -->
       <div class="nav-buttons-right">
         <a href="exhibitions.html" class="nav-btn">Exhibitions / CV</a>
         <a href="about.html" class="nav-btn">About</a>
@@ -347,6 +450,9 @@
         <a href="https://19933.biz/manhattanartcomic.html" target="_blank" class="nav-btn">Manhattan Art Comic</a>
       </div>
     </div>
+
+    <!-- Empty space for animation on mobile portrait -->
+    <div class="animation-space"></div>
 
     <!-- Mobile Navigation Grid -->
     <div class="mobile-nav-grid">
@@ -360,11 +466,17 @@
       <a href="https://19933.biz/manhattanartcomic.html" target="_blank" class="nav-btn">Manhattan Art Comic</a>
     </div>
 
-    <!-- Social Media Buttons -->
+    <!-- Social Buttons -->
     <div class="social-buttons homepage-social">
-      <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" rel="noopener">📷 Instagram</a>
-      <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" rel="noopener">𓅂 Twitter</a>
-      <a class="social-btn" href="https://wa.me/84339441925" target="_blank" rel="noopener">🕻 WhatsApp</a>
+      <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" rel="noopener">
+        <img src="images/picture-frame.png" alt="" class="social-icon"> Instagram
+      </a>
+      <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" rel="noopener">
+        𓅂 Twitter
+      </a>
+      <a class="social-btn" href="https://wa.me/84339441925" target="_blank" rel="noopener">
+        <img src="images/clamshell-mobile-phone.png" alt="" class="social-icon"> WhatsApp
+      </a>
     </div>
   </main>
 
@@ -372,17 +484,24 @@
   <footer>
     © 2025 Andrew Newell Walther. All rights reserved.
     <div class="visitor-counter">
-      <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fwalther.website&count_bg=%23000000&title_bg=%23000000&icon=&icon_color=%23FFFFFF&title=visits&edge_flat=true" alt="Visitor count" style="margin-top: 0.5rem;">
+      <div id="sfcjsx5sysr3cptq5s7hcjj7bq7mxpe3b5w"></div>
+      <script type="text/javascript" src="https://counter1.optistats.ovh/private/counter.js?c=jsx5sysr3cptq5s7hcjj7bq7mxpe3b5w&down=async" async></script>
+      <noscript>
+        <a href="https://www.freecounterstat.com" title="free hit counter">
+          <img src="https://counter1.optistats.ovh/private/freecounterstat.php?c=jsx5sysr3cptq5s7hcjj7bq7mxpe3b5w" border="0" title="free hit counter" alt="free hit counter">
+        </a>
+      </noscript>
     </div>
   </footer>
 
   <script src="menu.js"></script>
   <script src="script.js"></script>
   <script>
+    // Wrap letters for Easter egg
     const title = document.getElementById('main-title');
     const text = title.textContent;
-    title.innerHTML = text.split('').map(char => 
-      char === ' ' ? ' ' : `<span>${char}</span>`
+    title.innerHTML = text.split('').map(char =>
+      char === ' ' ? '<span class="title-space"> </span>' : `<span class="title-letter">${char}</span>`
     ).join('');
   </script>
 </body>
