--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       overflow-x: hidden;
     }
 
+    /* Easter egg landing zone space above footer */
+    .easter-egg-floor {
+      width: 100%;
+      height: 80px;
+      position: relative;
+    }
+
     /* ===================== TITLE ===================== */
     #main-title {
       font-size: 3.2rem;
@@ -53,7 +60,7 @@
     }
     .globe-wrapper {
       position: absolute;
-      left: 50%; top: 50%;
+      left: 50%; top: 38%;
       transform: translate(-50%, -50%);
       width: 380px; height: 380px;
       display: block;
@@ -342,6 +349,8 @@
       <img src="images/clamshell-mobile-phone.png" alt="" class="social-icon"> WhatsApp
     </a>
   </div>
+
+  <div class="easter-egg-floor"></div>
 
   <footer>
     © 2025 Andrew Newell Walther. All rights reserved.
