--- a/links.html
+++ b/links.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Links — Andrew Newell Walther</title>
   <meta name="robots" content="noindex, nofollow">
-  
+
   <!-- Favicon -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>☯️</text></svg>">
-  
+
   <link rel="stylesheet" href="style.css" />
-  
+
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-6XGRYTSC23"></script>
   <script>
@@ -19,61 +19,72 @@
     gtag('js', new Date());
     gtag('config', 'G-6XGRYTSC23');
   </script>
-  
+
   <style>
+    /* Force unicode symbols to text rendering */
+    .sym {
+      font-family: "Segoe UI Symbol", "Apple Symbols", "Arial Unicode MS", sans-serif;
+      font-variant-emoji: text;
+      -webkit-font-variant-emoji: text;
+      color: inherit;
+      font-style: normal;
+    }
+
     body {
-      background: #fff;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
       min-height: 100vh;
-      padding: 2rem 1rem;
+      padding: 2rem 1rem 3rem;
+      background: #fff;
     }
 
     .links-container {
-      max-width: 600px;
+      max-width: 540px;
       width: 100%;
       text-align: center;
     }
 
-    .links-header {
-      margin-bottom: 2rem;
-    }
-
+    /* Portrait - no circle */
     .profile-photo {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
+      width: 160px;
+      height: 200px;
       object-fit: cover;
-      margin-bottom: 1.5rem;
-      border: 2px solid #000;
+      object-position: center top;
+      margin-bottom: 1.2rem;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .links-header h1 {
-      font-size: 2rem;
+      font-size: 1.8rem;
       text-transform: uppercase;
       letter-spacing: 3px;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
       font-weight: normal;
     }
 
+    /* All link buttons */
     .links-list {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
-      margin: 2rem 0;
+      gap: 0.8rem;
+      margin: 0 0 1.2rem;
     }
 
     .link-item {
-      display: block;
-      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
+      padding: 0.85rem 1.5rem;
       background: #fff;
       border: 2px solid #000;
       text-decoration: none;
       color: #000;
-      font-size: 1.1rem;
-      transition: all 0.3s;
+      font-size: 1rem;
+      transition: all 0.2s;
       text-transform: uppercase;
       letter-spacing: 1px;
     }
@@ -83,23 +94,30 @@
       color: #fff;
     }
 
-    .social-buttons {
+    .link-item:hover .sym {
+      color: #fff;
+    }
+
+    /* Social buttons row */
+    .social-row {
       display: flex;
       justify-content: center;
-      gap: 1rem;
-      margin: 2rem 0;
+      gap: 0.6rem;
+      margin: 1.2rem 0;
       flex-wrap: wrap;
     }
 
     .social-btn {
-      padding: 0.75rem 1.5rem;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.35rem;
+      padding: 0.5rem 1rem;
       border: 2px solid #000;
       background: #fff;
       color: #000;
       text-decoration: none;
-      font-size: 1rem;
-      transition: all 0.3s;
-      display: inline-block;
+      font-size: 0.9rem;
+      transition: all 0.2s;
     }
 
     .social-btn:hover {
@@ -107,119 +125,205 @@
       color: #fff;
     }
 
-    .email-display {
-      margin: 2rem 0;
-      font-size: 1.1rem;
+    .social-btn:hover .sym {
+      color: #fff;
     }
 
-    .email-display a {
-      color: #000;
-      text-decoration: none;
-      border-bottom: 1px solid #000;
-    }
-
-    .email-display a:hover {
-      opacity: 0.7;
-    }
-
-    .additional-links {
-      margin-top: 3rem;
-      padding-top: 2rem;
+    /* Divider */
+    .divider {
+      border: none;
       border-top: 1px solid #ccc;
+      margin: 1.5rem 0;
     }
 
-    .qr-code {
-      margin-top: 3rem;
-      padding-top: 2rem;
-      border-top: 1px solid #ccc;
+    /* Newsletter inline form */
+    .newsletter-inline {
+      margin: 1.5rem 0;
     }
 
-    .qr-code img {
-      max-width: 250px;
-      width: 100%;
-      height: auto;
-      border: 1px solid #ddd;
-      padding: 1rem;
-      background: white;
+    .newsletter-inline h3 {
+      font-size: 0.9rem;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-weight: normal;
+      margin-bottom: 0.75rem;
     }
 
-    .footer-text {
-      margin-top: 2rem;
+    .newsletter-form-row {
+      display: flex;
+      gap: 0;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+
+    .newsletter-form-row input {
+      flex: 1;
+      padding: 0.65rem 0.75rem;
+      border: 2px solid #000;
+      border-right: none;
+      font-family: inherit;
+      font-size: 0.9rem;
+      outline: none;
+      background: #fff;
+    }
+
+    .newsletter-form-row input:focus {
+      border-color: #000;
+    }
+
+    .newsletter-form-row button {
+      padding: 0.65rem 1.2rem;
+      background: #000;
+      color: #fff;
+      border: 2px solid #000;
+      font-family: inherit;
       font-size: 0.85rem;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
+      white-space: nowrap;
+    }
+
+    .newsletter-form-row button:hover {
+      background: #fff;
+      color: #000;
+    }
+
+    .newsletter-msg {
+      font-size: 0.85rem;
+      margin-top: 0.5rem;
+      display: none;
+    }
+
+    /* QR code - half size */
+    .qr-section {
+      margin-top: 2rem;
+    }
+
+    .qr-section img {
+      width: 120px;
+      height: auto;
+      display: block;
+      margin: 0 auto 0.5rem;
+      border: 1px solid #ddd;
+      padding: 0.5rem;
+      background: #fff;
+    }
+
+    .qr-caption {
+      font-size: 0.8rem;
+      color: #666;
+      margin: 0;
+    }
+
+    .footer-copy {
+      margin-top: 2.5rem;
+      font-size: 0.8rem;
       color: #999;
     }
 
-    @media (max-width: 600px) {
-      .links-header h1 {
-        font-size: 1.5rem;
-        letter-spacing: 2px;
-      }
-
-      .link-item {
-        font-size: 1rem;
-        padding: 0.875rem 1.5rem;
-      }
-
-      .social-btn {
-        font-size: 0.9rem;
-        padding: 0.6rem 1.2rem;
-      }
+    @media (max-width: 480px) {
+      .links-header h1 { font-size: 1.4rem; }
+      .link-item { font-size: 0.9rem; padding: 0.75rem 1rem; }
+      .newsletter-form-row input,
+      .newsletter-form-row button { font-size: 0.8rem; }
     }
   </style>
 </head>
 <body>
 
   <div class="links-container">
+
+    <!-- Portrait - no circle -->
+    <img src="images/portrait.png" alt="Andrew Newell Walther" class="profile-photo">
+
     <div class="links-header">
-      <!-- Your photo - replace 'portrait_bw.png' with your actual photo filename -->
-      <img src="images/portrait.png" alt="Andrew Newell Walther" class="profile-photo">
       <h1>Andrew Newell Walther</h1>
     </div>
 
     <!-- Main Links -->
     <div class="links-list">
-      <a href="https://walther.website" class="link-item">walther.website</a>
+      <a href="https://walther.website" class="link-item">
+        <span class="sym">&#x26D3;</span> walther.website
+      </a>
       <a href="https://walther.website/paintings.html" class="link-item">Paintings</a>
       <a href="https://walther.website/drawings.html" class="link-item">Drawings</a>
       <a href="https://walther.website/text.html" class="link-item">Text</a>
-      <a href="https://19933.biz/manhattanartcomic.html" target="_blank" class="link-item">Manhattan Art Comic</a>
+      <a href="https://19933.biz/manhattanartcomic.html" target="_blank" class="link-item">
+        <span class="sym">&#x26D3;</span> Manhattan Art Comic
+      </a>
     </div>
 
     <!-- Social Buttons -->
-    <div class="social-buttons">
-      <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" rel="noopener">📷 Instagram</a>
-      <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" rel="noopener">🐦 Twitter</a>
-      <a class="social-btn" href="https://wa.me/84339441925" target="_blank" rel="noopener">💬 WhatsApp</a>
+    <div class="social-row">
+      <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" rel="noopener">
+        <span class="sym" style="font-variant-emoji:text;">&#x1F4F7;</span> Instagram
+      </a>
+      <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" rel="noopener">
+        <span class="sym">&#x13170;</span> Twitter
+      </a>
+      <a class="social-btn" href="https://wa.me/84339441925" target="_blank" rel="noopener">
+        <span class="sym" style="font-variant-emoji:text;">&#x1F581;</span> WhatsApp
+      </a>
     </div>
 
-    <!-- Newsletter -->
+    <!-- Contact button -->
     <div class="links-list">
-      <a href="https://walther.website/contact.html#newsletter" class="link-item">Newsletter</a>
+      <a href="https://walther.website/contact.html" class="link-item">Contact</a>
     </div>
 
-    <!-- Email -->
-    <div class="email-display">
-      <a href="mailto:newell.pdx@gmail.com">newell.pdx@gmail.com</a>
-    </div>
+    <hr class="divider">
 
     <!-- Additional Links -->
-    <div class="additional-links">
-      <div class="links-list">
-        <a href="https://www.instagram.com/a.lat.xca?igsh=aWo5cjJuNmhndThp" target="_blank" class="link-item">Instagram: Studio A-Lát-Xca</a>
-        <a href="https://on.soundcloud.com/otepneUhqUwPe8lm8l" target="_blank" class="link-item">Newell SoundCloud</a>
-      </div>
+    <div class="links-list">
+      <a href="https://www.instagram.com/a.lat.xca?igsh=aWo5cjJuNmhndThp" target="_blank" class="link-item">
+        Instagram: Studio A-Lát-Xca
+      </a>
+      <a href="https://on.soundcloud.com/otepneUhqUwPe8lm8l" target="_blank" class="link-item">
+        Newell SoundCloud
+      </a>
+    </div>
+
+    <!-- Newsletter inline -->
+    <hr class="divider">
+    <div class="newsletter-inline">
+      <h3>Newsletter &#x1F5DE;</h3>
+      <form id="linksNewsletterForm">
+        <div class="newsletter-form-row">
+          <input type="email" id="links-email" placeholder="your@email.com" required>
+          <button type="submit">Subscribe</button>
+        </div>
+        <div class="newsletter-msg" id="linksNewsletterMsg"></div>
+      </form>
     </div>
 
     <!-- QR Code -->
-    <div class="qr-code">
-      <img src="images/links-qr.png" alt="QR Code to this page" />
-      <p style="margin-top: 1rem; font-size: 0.9rem; color: #666;">Scan to save links</p>
+    <div class="qr-section">
+      <img src="images/links-qr.png" alt="QR code linking to this page">
+      <p class="qr-caption">This leads here.</p>
     </div>
 
-    <div class="footer-text">
-      © 2025 Andrew Newell Walther
-    </div>
+    <p class="footer-copy">© 2025 Andrew Newell Walther</p>
   </div>
+
+  <script>
+    document.getElementById('linksNewsletterForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const email = document.getElementById('links-email').value;
+      const subject = encodeURIComponent('Newsletter Subscription');
+      const body = encodeURIComponent(
+        'New newsletter subscription:\n\nEmail: ' + email +
+        '\nDate: ' + new Date().toISOString() +
+        '\nSource: links page'
+      );
+      window.location.href = 'mailto:newell.pdx@gmail.com?subject=' + subject + '&body=' + body;
+      const msg = document.getElementById('linksNewsletterMsg');
+      msg.textContent = 'Opening email client...';
+      msg.style.display = 'block';
+      this.reset();
+    });
+  </script>
 
 </body>
 </html>
