--- a/index.html
+++ b/index.html
@@ -181,27 +181,27 @@
         word-spacing: 100vw;
         font-size: 1.75rem;
         letter-spacing: 3px;
-        line-height: 1.3;
+        line-height: 1.0;
         text-align: center;
-        margin-top: 3.5rem;
-        margin-bottom: 0.4rem;
+        margin-top: 2.2rem;
+        margin-bottom: 0.1rem;
         padding: 0 1rem;
       }
 
-      /* Mobile globe */
+      /* Mobile globe - 25% larger: 190 * 1.25 = 238px */
       .mobile-globe-link {
         display: block;
-        width: 190px;
-        height: 190px;
-        margin: 0.4rem auto 0;
+        width: 238px;
+        height: 238px;
+        margin: 0.1rem auto 0;
         flex-shrink: 0;
         text-decoration: none;
         cursor: pointer;
         position: relative;
       }
       .mobile-globe-link .globe-container {
-        width: 190px;
-        height: 190px;
+        width: 238px;
+        height: 238px;
         position: relative;
       }
       .mobile-globe-link img.globe { width: 100%; height: 100%; display: block; }
@@ -239,16 +239,25 @@
     /* Landscape overrides - nested inside mobile breakpoint */
     @media (max-width: 1000px) and (orientation: landscape) {
       #main-title {
-        margin-top: 3.2rem;
+        margin-top: 2.0rem;
+        margin-bottom: 0.05rem;
         font-size: 1.4rem;
+        line-height: 1.0;
       }
       .mobile-globe-link,
       .mobile-globe-link .globe-container {
-        width: 120px;
-        height: 120px;
+        width: 188px;
+        height: 188px;
+        margin-top: 0.1rem;
+        margin-bottom: 0;
       }
       .animation-space { display: none; }
-      .mobile-nav-grid { max-width: 500px; gap: 0.5rem; margin-bottom: 1rem; }
+      .mobile-nav-grid {
+        max-width: 500px;
+        gap: 0.5rem;
+        margin-top: 7rem;
+        margin-bottom: 1rem;
+      }
       .mobile-nav-grid .nav-btn { font-size: 0.78rem; padding: 0.5rem 0.4rem; }
     }
   </style>
