Add Easter egg animation - letters fall, bounce, form anagrams

--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
 
   <script src="menu.js"></script>
   <script src="script.js"></script>
+  <script src="easter-egg.js"></script>
   <script>
     // Wrap letters for Easter egg
     const title = document.getElementById('main-title');
